<resources>
    <string name="app_name">KartAppen</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="dialog_layout_edit_navn">Stedsnavn</string>
    <string name="dialog_layout_edit_navn_hint">Legg til navn</string>
    <string name="dialog_layout_edit_adresse">Adresse</string>
    <string name="dialog_layout_edit_adresse_hint">Legg til adresse</string>
    <string name="dialog_layout_edit_liker">Jeg liker stedet, fordi …</string>
    <string name="dialog_layout_edit_liker_hint">Fordi…</string>
    <string name="dialog_layout_edit_beskrivelse">Beskrivelse</string>
    <string name="dialog_layout_edit_beskrivelse_hint">Legg til beskrivelse</string>
    <string name="dialog_layout_navn">Stedsnavn</string>
    <string name="dialog_layout_adresse">Adresse</string>
    <string name="dialog_layout_liker">Jeg liker stedet, fordi …</string>
    <string name="dialog_layout_beskrivelse">Beskrivelse</string>
    <string name="marker_navn_placeholder">Norge</string>
    <string name="marker_adresse_placeholder">AD Gate 111</string>
    <string name="marker_liker_placeholder">Det er fint.</string>
    <string name="marker_beskrivelse_placeholder">Grønt</string>
    <string name="marker_kordinater_placeholder">Kordinater</string>
    <string name="marker_edit_navn_placeholder">Norge</string>
    <string name="marker_edit_adresse_placeholder">Norge</string>
    <string name="marker_edit_liker_placeholder">Norge</string>
    <string name="marker_edit_beskrivelse_placeholder">Norge</string>
    <string name="marker_edit_kordinater_placeholder">Norge</string>
    <string name="delete">delete</string>
    <string name="tag">Erlend</string>
    <string name="map_description">Map with markers.</string>
    <string name="nytt_sted">Nytt sted</string>
    <string name="endre">Endre</string>
    <string name="lukk">Lukk</string>
    <string name="lagre">Lagre</string>
    <string name="avbryt">Avbryt</string>
    <string name="ja">Ja</string>
    <string name="nei">Nei</string>
    <string name="bekreft_sletting">Bekreft sletting</string>
    <string name="bekreft_sletting_melding">Vil du virkelig slette markøren?</string>
    <string name="feilmelding_hente_etter_lagring">Feilet å hente ID til den nye markøren</string>
    <string name="feilmelding_lagring">Lagring feilet.</string>
    <string name="feilmedling_endring">Endring feilet.</string>
    <string name="feilmelding_sletting">Sletting feilet.</string>
</resources>