<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/marker_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/dialog_layout_edit_navn"
                />

            <EditText
                android:id="@+id/marker_navn_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:hint="@string/dialog_layout_edit_navn_hint"
                android:autofillHints="" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/dialog_layout_edit_adresse" />


            <EditText
                android:id="@+id/marker_addresse_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:hint="@string/dialog_layout_edit_adresse_hint"
                android:autofillHints="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/dialog_layout_liker" />

            <EditText
                android:id="@+id/marker_liker_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:hint="@string/dialog_layout_edit_liker_hint"
                android:autofillHints="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/dialog_layout_edit_beskrivelse" />

            <EditText
                android:id="@+id/marker_beskrivelse_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:hint="@string/dialog_layout_edit_beskrivelse_hint"
                android:autofillHints="" />

            <TextView
                android:id="@+id/marker_kordinater_edit"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/marker_edit_kordinater_placeholder" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>